<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_login_bg"
    tools:context=".View.User.LoginView">

    <!--   todo 登录按钮-->
    <Button
        android:id="@+id/btnLoginSubmit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="#aeecff"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    todo 账号-->
    <EditText
        android:id="@+id/etLoginAccount"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_login_account"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/etLoginPassword"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <!--    todo 密码-->
    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_login_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btnLoginSubmit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/etLoginAccount"
        app:layout_constraintVertical_bias="0.8" />

    <!--    todo 返回按钮-->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_login_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noAccount"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLoginSubmit"
        app:layout_constraintVertical_bias="0.05" />

    <!--    todo 注册按钮-->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toRightOf="@id/tvNoAccount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />


</androidx.constraintlayout.widget.ConstraintLayout>
