<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.User.RegisterView">

    <Button
        android:id="@+id/btnRegisterSubmit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="#aeecff"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/etRegisterAccount"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_login_account"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/etRegisterPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_login_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/etRegisterPasswordConfirm"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/etRegisterAccount"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/etRegisterPasswordConfirm"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_login_password"
        android:hint="@string/registerPasswordConfirm"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btnRegisterSubmit"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/etRegisterPassword"
        app:layout_constraintVertical_bias="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>